Update Tools For DS Peer Graded Assign_Notebook.ipynb

--- a/Tools For DS Peer Graded Assign_Notebook.ipynb
+++ b/Tools For DS Peer Graded Assign_Notebook.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EMMANUEL AGYAPONG JNR\n",
+    "** EMMANUEL AGYAPONG JNR**\n",
     "\n",
     "I ASPIRE TO BE A DATA SCIENTIST"
    ]
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*I am interested in data science because I love to help people and with the skills attained in data science, i can be of great help in major fields for eg. aviation, health etc."
+    "*I am interested in data science because I love to help people and with the skills attained in data science, i can be of great help in major fields for eg. aviation, health etc.*"
    ]
   },
   {
